--- a/app/src/main/res/layout/activity_withdrawals_request.xml
+++ b/app/src/main/res/layout/activity_withdrawals_request.xml
@@ -15,6 +15,24 @@
         tools:ignore="MissingConstraints">
         <TextView
             android:layout_marginTop="10dp"
+            android:id="@+id/tv_clientname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:text="goutam"
+            android:paddingLeft="25dp"
+            style="@style/requestuser"
+            />
+        <TextView
+            android:id="@+id/tv_websitename"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:text="goutam"
+            android:paddingLeft="25dp"
+            style="@style/requestuser"
+            />
+        <TextView
             android:id="@+id/tv_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,6 +43,7 @@
            />
         <TextView
             android:id="@+id/tv_userid"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="85454"
