--- a/app/src/main/res/layout/newwebsite.xml
+++ b/app/src/main/res/layout/newwebsite.xml
@@ -49,6 +49,7 @@
             android:id="@+id/tv_desciption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginTop="4dp"
             style="@style/textsubtile"
             android:text="description"
