--- a/app/src/main/res/layout/activity_clientids_requestlist.xml
+++ b/app/src/main/res/layout/activity_clientids_requestlist.xml
@@ -33,6 +33,7 @@
                     android:layout_height="50dp"
                     android:layout_marginEnd="6dp"
                     android:layout_marginRight="6dp"
+                    android:layout_marginTop="5dp"
                     android:src="@drawable/spiderlogo5"
                     app:civ_border_color="@color/yellow"
                     app:civ_border_width="2dp" />
@@ -49,8 +50,21 @@
                     android:layout_marginLeft="10dp"
                     style="@style/texttitle" />
                 <TextView
-                    android:id="@+id/re_password"
+                    android:id="@+id/re_website"
                     android:layout_below="@+id/re_name"
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/icon"
+                    android:layout_toRightOf="@id/icon"
+                    android:gravity="center_vertical"
+                    android:text="www.com"
+                    android:layout_marginLeft="10dp"
+                    style="@style/textsubtile" />
+
+                <TextView
+                    android:id="@+id/re_password"
+                    android:layout_below="@+id/re_website"
                     android:layout_width="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
