--- a/app/src/main/res/layout/activity_close_id_list.xml
+++ b/app/src/main/res/layout/activity_close_id_list.xml
@@ -136,7 +136,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Login user"
+                    android:text="Client id"
                     style="@style/requestuser"/>
             </LinearLayout>
             <LinearLayout
