--- a/app/src/main/res/layout/activity_deposit_id_details.xml
+++ b/app/src/main/res/layout/activity_deposit_id_details.xml
@@ -35,9 +35,10 @@
                 android:layout_below="@id/d_username"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="4dp"
+                android:visibility="gone"
                 android:ellipsize="end"
-                android:maxLines="1"
                 android:fontFamily="@font/gtwalsheimpro_regular"
+                android:maxLines="1"
                 android:text="User ID"
                 android:textColor="@color/white"
                 android:textSize="16dp" />
